--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Memory Game!</h1>
-    <div id="game">
+    <div id="game-board">
     </div>
 
-    <div>
+    <div id="game-controls">
         <h2 id="score"></h2>
         <button id="start-btn">Start New Game</button>
     </div>
